# tilebox-iac

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  __main__.py  pyproject.toml
.github/workflows/: main.yml
tilebox_iac/: __init__.py  auto_scaling_cluster.py  cloud-init.yaml  image_builder.py  network.py  release_runner.py  secrets.py  service_account.py
tilebox_iac/aws/: __init__.py  auto_scaling_cluster.py  cloud-init.yaml  iam_role.py  image_builder.py  network.py  secrets.py
tilebox_iac/azure/: __init__.py  auto_scaling_cluster.py  cloud-init.yaml  identity.py  network.py  secrets.py
tilebox_iac/gcp/: __init__.py  auto_scaling_cluster.py  cloud-init.yaml  image_builder.py  network.py  secrets.py  service_account.py
